--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
    <meta charset="UTF-8">
@@ -11,13 +11,27 @@
       integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
    <link href="https://fonts.googleapis.com/css?family=Open+Sans:regular" rel="stylesheet" />
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" />
+   <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css" />
+   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
+   <script src="https://api-maps.yandex.ru/2.1/?f7146035-df51-4ca4-b63d-31c2b2854ab3&lang=ru_RU"
+      type="text/javascript"> </script>
+   <script src="https://unpkg.com/simplebar@latest/dist/simplebar.min.js"></script>
+   <script src="scripts/inputmaskPlug.js"></script>
+   <script src="https://unpkg.com/just-validate@latest/dist/just-validate.production.min.js"></script>
 
+   <!-- My files -->
    <link rel="stylesheet" href="styles/checkbox.css">
    <link rel="stylesheet" href="styles/map.css">
    <link rel="stylesheet" href="styles/scroll.css">
    <link rel="stylesheet" href="styles/select.css">
-   <link rel="stylesheet" href="styles/validate&mask.css">
+   <link rel="stylesheet" href="styles/form.css">
    <link rel="stylesheaet" href="styles/tooltip.css">
+
+   <script src="scripts/select.js" defer></script>
+   <script src="scripts/yandexMap.js" defer></script>
+   <script src="scripts/scroll.js" defer></script>
+   <script src="scripts/form.js" defer></script>
 
    <style>
       * {
@@ -39,12 +53,23 @@
 
       .wrapper {
          display: flex;
-         justify-content: center;
+         justify-content: flex-start;
          align-items: center;
+         flex-wrap: wrap;
          height: 100vh;
          width: 100vw;
+         padding: 3%;
+      }
+
+      .wrapper>*:not(:last-child) {
+         margin-right: 10vh;
+      }
+
+      .wrapper>* {
+         margin-bottom: 10vh;
       }
    </style>
+
 </head>
 
 <body>
@@ -90,9 +115,45 @@
          </label>
       </div>
 
-      <div class="select">
+      <select class="select" name="">
+         <option value="Древесина" class="option"></option>
+         <option value="Металл" class="option"></option>
+         <option value="Камень" class="option"></option>
+         <option value="Пластик" class="option"></option>
+         <option value="Композитный" class="option"></option>
+         <option value="Гипс" class="option"></option>
+      </select>
 
+      <div class="map" id="map"></div>
+
+      <div class="scroll" data-simplebar data-simplebar-auto-hide="false">
+         Сложно сказать, почему многие известные личности представлены в исключительно
+         положительном свете. Лишь активно развивающиеся страны третьего мира будут объективно рассмотрены
+         соответствующими инстанциями. Мы вынуждены отталкиваться от того, что высокотехнологичная концепция
+         общественного уклада представляет собой интересный эксперимент проверки глубокомысленных рассуждений. Имеется
+         спорная точка зрения, гласящая примерно следующее: непосредственные участники технического прогресса освещают
+         чрезвычайно интересные особенности картины в целом, однако конкретные выводы, разумеется, обнародованы.
+         Значимость этих проблем настолько очевидна, что социально-экономическое развитие, а также свежий взгляд на
+         привычные вещи - безусловно открывает новые горизонты для первоочередных требований.
+         соответствующими инстанциями. Мы вынуждены отталкиваться от того, что высокотехнологичная концепция
+         общественного уклада представляет собой интересный эксперимент проверки глубокомысленных рассуждений.
       </div>
+
+      <form class="form" id="form" action="#">
+         <div class="form__input-box">
+            <input class="form__input" id="inputName" name="name" type="text" placeholder="Имя*">
+         </div>
+
+         <div class="form__input-box">
+            <input class="form__input" id="inputPhone" name="phone" type="tel" placeholder="Телефон*">
+         </div>
+
+         <div class="form__input-box">
+            <input class="form__input" id="inputEmail" name="email" type="email" placeholder="E-mail*">
+         </div>
+
+         <button class="form__btn" type="submit">Заказать</button>
+      </form>
 
    </div>
 </body>
